--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -60,7 +60,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-user"></i>
+          <i class="fas fa-star"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -173,7 +173,7 @@
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white"><a href="miscellaneous.html">About</a></h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
