Added small paddings to about introduction text and page icon, also changed page title to actual name instead of internet name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Fireshadows - Portfolio</title>
+  <title>Antonio Ackalin - Portfolio</title>
+  <link rel="icon" type="image/png" href="img/avatar1.png" />
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -185,7 +186,7 @@
       </div>
 
       <!-- About Section Content -->
-      <div class="row">
+      <div class="about-intro mb-4">
 		<div class="lead text-center">
 			<p>
 			Oh, <b>Me? </b>I'm an enthusiastic <b>game developer</b> who've been greatly interested in creating video game fun since forever!
@@ -202,27 +203,29 @@
 			I enjoy doing all this especially with good company and swedish fika!
 			</p>
 		</div>
-			<div class="col-lg-4 ml-auto">
-			  <h4 class="text-center">Capabilities</h4><hr>
-				  <ul class="text-center">
-					<li class="lead"><i class="fas fa-keyboard"></i> Programming</li>
-					<li class="lead"><i class="far fa-lightbulb"></i> Game Design</li>
-					<li class="lead"><i class="fas fa-music"></i> Sound Design</li>
-					<li class="lead"><i class="fas fa-drum"></i> Music Composition</li>
-					<li class="lead"><i class="fas fa-pencil-alt"></i> Writing</li>
-				  </ul>
-			  <!--<p class="lead">Uppsala University Campus Gotland in Game design & Programming</p>-->
-			</div>
-			<div class="col-lg-4 mr-auto">
-			  <h4 class="text-center">Education</h4><hr>
-				  <h5 class ="text-center mb-1">Uppsala University<h5>
-					<p class="text-center lead">Game Design & Programming<br>
-					(2016 – 2019)</p>
-				  <h5 class ="text-center mb-1">Futuregames<h5>
-					<p class="text-center lead">Game Programming<br>
-					(2019 – 2021)</p>
-			  <!--<p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>-->
-			</div>
+      </div>
+      <div class="row">
+		<div class="col-lg-4 ml-auto">
+		  <h4 class="text-center">Capabilities</h4><hr>
+			  <ul class="text-center">
+				<li class="lead"><i class="fas fa-keyboard"></i> Programming</li>
+				<li class="lead"><i class="far fa-lightbulb"></i> Game Design</li>
+				<li class="lead"><i class="fas fa-music"></i> Sound Design</li>
+				<li class="lead"><i class="fas fa-drum"></i> Music Composition</li>
+				<li class="lead"><i class="fas fa-pencil-alt"></i> Writing</li>
+			  </ul>
+		  <!--<p class="lead">Uppsala University Campus Gotland in Game design & Programming</p>-->
+		</div>
+		<div class="col-lg-4 mr-auto">
+		  <h4 class="text-center">Education</h4><hr>
+			  <h5 class ="text-center mb-1">Uppsala University<h5>
+				<p class="text-center lead">Game Design & Programming<br>
+				(2016 – 2019)</p>
+			  <h5 class ="text-center mb-1">Futuregames<h5>
+				<p class="text-center lead">Game Programming<br>
+				(2019 – 2021)</p>
+		  <!--<p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>-->
+		</div>
       </div>
 	  
       <!-- About Section Button -->
@@ -379,13 +382,13 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <p class="text-secondary mb-5"><i>On the smithereens of an Old World, they struggle for supremacy in frantic arena boat-battles.<br>
-				Join a faction, matey, and engage with up to 3 friends in local multiplayer mayhem!<br>
 				Joust your way through fierce free-for-all duels and turbulent team battles,
 				and find out who's the toughest Space Pirate around!</i></p>
+                <p class="text-secondary mb-5">The second school project from my education in Uppsala University.</p>
 				<!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/rimramrum/charselect.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="text-secondary mb-5">The second school project from my education in Uppsala University.</p>
+                <p class="text-secondary mb-5">It began like this...</p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
