About description update, added W.I.P notification

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
   <title>Antonio Ackalin - Portfolio</title>
   <link rel="icon" type="image/png" href="img/avatar1.png" />
-
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -187,21 +186,25 @@
 
       <!-- About Section Content -->
       <div class="about-intro mb-4">
-		<div class="lead text-center">
+		<div class="lead text-left">
 			<p>
-			Oh, <b>Me? </b>I'm an enthusiastic <b>game developer</b> who've been greatly interested in creating video game fun since forever!
+			I'm an enthusiastic <b>game developer</b> who've been greatly interested in creating video game fun since forever!
 			</p><p>
-			That is why I have acquainted myself with <b>programming</b>, <b>game design</b>, <b>art</b>, <b>animation</b>, <b>audio</b> and <b>writing</b> to become a <b>capable</b> and <b>savvy developer</b>.
-			With my main proffession being programming, I quickly get to rapidly prototype game concepts and use my problem solving ability to solve bugs and faulty design alike.
-			</p><p>	
+			That is why I have acquainted myself with multiple fields within game dev to become a <b>capable</b> and <b>savvy developer</b>.<br>
+			With my main and strongest proffession being <b>programming</b>, I quickly get to rapidly prototype game concepts and use my problem solving ability to solve bugs and faulty design alike.<br>
+			I am mainly interested in creating gameplay mechanics and construct the player's experience, ensuring it's one that is not soon forgotten.
+			</p><p>
+			I have amassed plenty of experience of working in projects and am dependable in teamwork with people of other disciplines. 
+			</p><!--<p>	
 			On my free time, I practice game dev with side projects while learning to use Unity, Unreal Engine and C++ libraries.<br>
 			I also study the genre of games I enjoy the most to explore and distinguish the strengths and weaknesses of their game design. <br>
 			And occasionally, I read or watch other media to absorb influences to my preferred aesthetics which I then like to channel into my work.
 			
-			</p><p>
+			</p>--><p>
 			As a game dev, I face the industry equipped with my wireless keyboard and shiny headset.<br>
 			I enjoy doing all this especially with good company and swedish fika!
 			</p>
+			<p class="text-center"><b>W.I.P</br></p>
 		</div>
       </div>
       <div class="row">
