Fixed missing b end tag

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			As a game dev, I face the industry equipped with my wireless keyboard and shiny headset.<br>
 			I enjoy doing all this especially with good company and swedish fika!
 			</p>
-			<p class="text-center"><b>W.I.P</br></p>
+			<p class="text-center"><b>W.I.P</b></p>
 		</div>
       </div>
       <div class="row">
