Added trailers to project pages and a couple details of every project

--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
 			I also study the genre of games I enjoy the most to explore and distinguish the strengths and weaknesses of their game design. <br>
 			And occasionally, I read or watch other media to absorb influences to my preferred aesthetics which I then like to channel into my work.
 			
-			</p>--><p>
+			</p><p>
 			As a game dev, I face the industry equipped with my wireless keyboard and shiny headset.<br>
 			I enjoy doing all this especially with good company and swedish fika!
-			</p>
+			</p>-->
 			<p class="text-center"><b>W.I.P</b></p>
 		</div>
       </div>
@@ -318,13 +318,13 @@
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Social Media</h4>
-          <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/Firreskuggan">
-            <i class="fab fa-fw fa-twitter"></i>
-          </a>
           <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/antonio-ackalin-162b80199/">
             <i class="fab fa-fw fa-linkedin-in"></i>
-          </a><a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Fireshadows">
+          </a>
+          <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Fireshadows">
             <i class="fab fa-fw fa-github"></i>
+          </a><a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/Firreskuggan">
+            <i class="fab fa-fw fa-twitter"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="https://soundcloud.com/firreskuggan">
             <i class="fab fa-fw fa-soundcloud"></i>
@@ -384,17 +384,28 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <p class="text-secondary mb-5"><i>On the smithereens of an Old World, they struggle for supremacy in frantic arena boat-battles.<br>
+                <p class="text-secondary mb-4"><i>On the smithereens of an Old World, they struggle for supremacy in frantic arena boat-battles.<br>
 				Joust your way through fierce free-for-all duels and turbulent team battles,
 				and find out who's the toughest Space Pirate around!</i></p>
-                <p class="text-secondary mb-5">The second school project from my education in Uppsala University.</p>
-				<!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/rimramrum/charselect.png" alt="">
+				<div class="text-left">
+				<hr>
+				<p class="text-secondary">
+				<b>Role:</b> Programmer, Level designer<br>
+				<b>Team size:</b> 6
+				</p>
+				<hr>
+                <p class="text-secondary mb-4">The second school project from my game design & programming education in Uppsala University, which was later further polished for an itch.io release.</p>
+				<!-- Portfolio Modal - Video -->
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/Adwd13_MUaI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <!-- Portfolio Modal - Text -->
                 <p class="text-secondary mb-5">It began like this...</p>
+				<!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/rimramrum/charselect.png" alt="">
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                </div>
+				
+				<button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -430,11 +441,21 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+				<div class="text-left">
+				<hr>
+				<p class="text-secondary">
+				<b>Role:</b> Programmer, Sound Designer, Musician<br>
+				<b>Team size:</b> 6
+				</p>
+				<hr>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+				<!-- Portfolio Modal - Video -->
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/4js-2c7N6ME" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+                </div>
+				<button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
                 </button>
@@ -470,10 +491,20 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+				<div class="text-left">
+				<hr>
+				<p class="text-secondary">
+				<b>Role:</b> Programmer, Writer, Sound Designer, Musician<br>
+				<b>Team size:</b> 10
+				</p>
+				<hr>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+				<!-- Portfolio Modal - Video -->
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/1yVosrdHw2s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+                </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -510,10 +541,18 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+                <div class="text-left">
+				<hr>
+				<p class="text-secondary">
+				<b>Role:</b> Programmer, Designer<br>
+				<b>Team size:</b> 2
+				</p>
+				<hr>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+                </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -550,10 +589,20 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+                <div class="text-left">
+				<hr>
+				<p class="text-secondary">
+				<b>Role:</b> Programmer, Designer, Musician<br>
+				<b>Team size:</b> 5
+				</p>
+				<hr>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+				<!-- Portfolio Modal - Video -->
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/NGC-TpGaQX0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+                </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -590,10 +639,20 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+                <div class="text-left">
+				<hr>
+				<p class="text-secondary">
+				<b>Role:</b> Programmer<br>
+				<b>Team size:</b> 10
+				</p>
+				<hr>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+				<!-- Portfolio Modal - Video -->
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/e_5mpATL9JM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
+                </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
