--- a/index.html
+++ b/index.html
@@ -391,14 +391,26 @@
 				<hr>
 				<p class="text-secondary">
 				<b>Role:</b> Programmer, Level designer<br>
-				<b>Team size:</b> 6
+				<b>Team size:</b> 7
 				</p>
 				<hr>
-                <p class="text-secondary mb-4">The second school project from my game design & programming education in Uppsala University, which was later further polished for an itch.io release.</p>
+                <p class="text-secondary mb-4">The second school project from my game design & programming education in Uppsala University, which was later further polished for an itch.io release by 2019.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/Adwd13_MUaI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/Adwd13_MUaI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
                 <!-- Portfolio Modal - Text -->
-                <p class="text-secondary mb-5">It began like this...</p>
+                <p class="text-secondary mb-5">During its exhibition at Gotland Game Conference 2017 (GGC17), RIM RAM RUM was a player-versus-player arcade game. It was controlled with a ship's wheel for steering, button for dashing and a rope that you pulled for firing cannons at your rival, as demonstrated in the trailer below.</p>
+				<!-- Portfolio Modal - Video -->
+				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/Adwd13_MUaI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+                <!-- Portfolio Modal - Text -->
+                <p class="text-secondary mb-5">I was mainly in charge of UI functionality, the implementation of main mechanics such as dashing, jumping, cannonball firing and most importantly for GGC17, input methods that suited our unconventional controls.</p>
+				<!-- Portfolio Modal - Header -->
+				<h3 class="text-secondary text-center">Handling multiple mouse devices</h3>
+				<div class="divider-custom"><div class="header-custom-line"></div></div>
+				<p class="text-secondary mb-5">
+				The great concern at that time was how to have the game recognize inputs from multiple mices, since our constructed controls relied on using a mouse for each player to detect which way a wheel was steering towards. A unity plug-in called Multi Input helped resolve that issue since nearly no other tools was possible to use. The library that the asset provided made it possible for the game to distinguish and handle multiple input devices of the same type.<br>
+				However, the implementation of the new input methods meant that each player needed an input device assigned through code. The game should know what input devices to use for each player since each steering wheel was designed to be used by player 1 and 2 respectively. .  
+				</p>
+				<p class="text-secondary text-center"><b>W.I.P</b></p>
 				<!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/rimramrum/charselect.png" alt="">
                 <!-- Portfolio Modal - Image -->
@@ -451,7 +463,8 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/4js-2c7N6ME" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/4js-2c7N6ME" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<p class="text-secondary text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
@@ -501,7 +514,8 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/1yVosrdHw2s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/1yVosrdHw2s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<p class="text-secondary text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
@@ -550,6 +564,7 @@
 				<hr>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+				<p class="text-secondary text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
@@ -599,7 +614,8 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/NGC-TpGaQX0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/NGC-TpGaQX0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<p class="text-secondary text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
@@ -649,7 +665,8 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/e_5mpATL9JM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/e_5mpATL9JM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<p class="text-secondary text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
