Video players stops when modals closes

--- a/index.html
+++ b/index.html
@@ -394,13 +394,13 @@
 				<b>Team size:</b> 7
 				</p>
 				<hr>
-                <p class="text-secondary mb-4">The second school project from my game design & programming education in Uppsala University, which was later further polished for an itch.io release by 2019.</p>
+                <p class="text-secondary mb-4">The second game project from my game design & programming education in Uppsala University, which was later further polished for an itch.io release by 2019.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/Adwd13_MUaI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<div class="video-container mb-4"><iframe id="shame" width="100%" height="100%" src="https://www.youtube.com/embed/Adwd13_MUaI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <!-- Portfolio Modal - Text -->
                 <p class="text-secondary mb-5">During its exhibition at Gotland Game Conference 2017 (GGC17), RIM RAM RUM was a player-versus-player arcade game. It was controlled with a ship's wheel for steering, button for dashing and a rope that you pulled for firing cannons at your rival, as demonstrated in the trailer below.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/Adwd13_MUaI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/mHF5S1U-vQU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <!-- Portfolio Modal - Text -->
                 <p class="text-secondary mb-5">I was mainly in charge of UI functionality, the implementation of main mechanics such as dashing, jumping, cannonball firing and most importantly for GGC17, input methods that suited our unconventional controls.</p>
 				<!-- Portfolio Modal - Header -->
@@ -463,7 +463,7 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/4js-2c7N6ME" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/4js-2c7N6ME" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 				<p class="text-secondary text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
@@ -514,7 +514,7 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/1yVosrdHw2s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/1yVosrdHw2s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 				<p class="text-secondary text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
@@ -614,7 +614,7 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/NGC-TpGaQX0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/NGC-TpGaQX0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 				<p class="text-secondary text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
@@ -665,7 +665,7 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
-				<div class="video-container mb-4"><div><iframe width="100%" height="100%" src="https://www.youtube.com/embed/e_5mpATL9JM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/e_5mpATL9JM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 				<p class="text-secondary text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
