--- a/index.html
+++ b/index.html
@@ -384,33 +384,32 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <p class="text-secondary mb-4"><i>On the smithereens of an Old World, they struggle for supremacy in frantic arena boat-battles.<br>
-				Joust your way through fierce free-for-all duels and turbulent team battles,
-				and find out who's the toughest Space Pirate around!</i></p>
-				<div class="text-left">
+				<div class="text-secondary text-left">
+                <!-- Portfolio Modal - Intro -->
+                <p class="mb-4">The second game project from my education in Uppsala University back in 2017. The games each team made were required to use unconventional input devices that could be played on an arcade cabinet. This was later further polished for an itch.io release by 2019.</p>
 				<hr>
-				<p class="text-secondary">
+				<p>
 				<b>Role:</b> Programmer, Level designer<br>
-				<b>Team size:</b> 7
+				<b>Team size:</b> 7<br>
+				<b>Engine:</b> Unity C#
 				</p>
 				<hr>
-                <p class="text-secondary mb-4">The second game project from my game design & programming education in Uppsala University, which was later further polished for an itch.io release by 2019.</p>
 				<!-- Portfolio Modal - Video -->
 				<div class="video-container mb-4"><iframe id="shame" width="100%" height="100%" src="https://www.youtube.com/embed/Adwd13_MUaI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <!-- Portfolio Modal - Text -->
-                <p class="text-secondary mb-5">During its exhibition at Gotland Game Conference 2017 (GGC17), RIM RAM RUM was a player-versus-player arcade game. It was controlled with a ship's wheel for steering, button for dashing and a rope that you pulled for firing cannons at your rival, as demonstrated in the trailer below.</p>
+                <p class="mb-5">During its exhibition at Gotland Game Conference 2017 (GGC17), RIM RAM RUM was a player-versus-player arcade game. It was controlled with a ship's wheel for steering, button for dashing and a rope that you pulled for firing cannons at your rival, as demonstrated in the trailer below.</p>
 				<!-- Portfolio Modal - Video -->
 				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/mHF5S1U-vQU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <!-- Portfolio Modal - Text -->
-                <p class="text-secondary mb-5">I was mainly in charge of UI functionality, the implementation of main mechanics such as dashing, jumping, cannonball firing and most importantly for GGC17, input methods that suited our unconventional controls.</p>
+                <p class="mb-5">I was mainly in charge of UI functionality, the implementation of main mechanics such as dashing, jumping, cannonball firing and most importantly for GGC17, input methods that suited our unconventional controls.</p>
 				<!-- Portfolio Modal - Header -->
-				<h3 class="text-secondary text-center">Handling multiple mouse devices</h3>
+				<h3 class="text-center">Handling multiple mouse devices</h3>
 				<div class="divider-custom"><div class="header-custom-line"></div></div>
-				<p class="text-secondary mb-5">
+				<p class="mb-5">
 				The great concern at that time was how to have the game recognize inputs from multiple mices, since our constructed controls relied on using a mouse for each player to detect which way a wheel was steering towards. A unity plug-in called Multi Input helped resolve that issue since nearly no other tools was possible to use. The library that the asset provided made it possible for the game to distinguish and handle multiple input devices of the same type.<br>
 				However, the implementation of the new input methods meant that each player needed an input device assigned through code. The game should know what input devices to use for each player since each steering wheel was designed to be used by player 1 and 2 respectively. .  
 				</p>
-				<p class="text-secondary text-center"><b>W.I.P</b></p>
+				<p class="text-center"><b>W.I.P</b></p>
 				<!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/rimramrum/charselect.png" alt="">
                 <!-- Portfolio Modal - Image -->
@@ -453,18 +452,21 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-				<div class="text-left">
+				<div class="text-left text-secondary">
+                <!-- Portfolio Modal - Intro -->
+				<p class="mb-4">The first game project in my Futuregames education. Teams consisting of only 2D artists and programmers were to create a game with mechanics inspired by different types of classic arcade games. Hammer Hermit is a game with mechanics inspired by Tetris and Ice Climbers.</p>
 				<hr>
-				<p class="text-secondary">
+				<p>
 				<b>Role:</b> Programmer, Sound Designer, Musician<br>
-				<b>Team size:</b> 6
+				<b>Team size:</b> 6<br>
+				<b>Engine:</b> Unity C#
 				</p>
 				<hr>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
 				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/4js-2c7N6ME" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-				<p class="text-secondary text-center"><b>W.I.P</b></p>
+				<p class="text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
@@ -504,18 +506,18 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-				<div class="text-left">
-				<hr>
-				<p class="text-secondary">
+				<div class="text-secondary text-left">
+                <!-- Portfolio Modal - Intro -->
+                <p class="mb-4">The second game project of Futuregames, where the game had to evoke a certain theme of our choice. Transient came to evoke suspiciousness in the player. With 8 weeks and a team of 10, Transient became one of the most extensive projects I’ve been part of as of yet.</p>
+				<!-- Portfolio Modal - Details -->
+				<hr><p>
 				<b>Role:</b> Programmer, Writer, Sound Designer, Musician<br>
-				<b>Team size:</b> 10
-				</p>
-				<hr>
-                <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+				<b>Team size:</b> 10<br>
+				<b>Engine:</b> Unity C#
+				</p><hr>
 				<!-- Portfolio Modal - Video -->
 				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/1yVosrdHw2s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-				<p class="text-secondary text-center"><b>W.I.P</b></p>
+				<p class="text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
@@ -555,16 +557,16 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <div class="text-left">
-				<hr>
-				<p class="text-secondary">
+                <div class="text-secondary text-left">
+                <!-- Portfolio Modal - Intro -->
+                <p class="mb-4">For a 5 weeks long assignment during second year in Uppsala University, Ambiverse was conceptualised out of love for JRPG games. This was a tough but learnful experience. As the sole programmer, I created a variety of systems to bridge the gap between design and code.</p>
+				<!-- Portfolio Modal - Details -->
+				<hr><p>
 				<b>Role:</b> Programmer, Designer<br>
-				<b>Team size:</b> 2
-				</p>
-				<hr>
-                <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-				<p class="text-secondary text-center"><b>W.I.P</b></p>
+				<b>Team size:</b> 2<br>
+				<b>Engine:</b> Unity C#
+				</p><hr>
+				<p class="text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
@@ -604,18 +606,19 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <div class="text-left">
-				<hr>
-				<p class="text-secondary">
+                <div class="text-secondary text-left">
+                <!-- Portfolio Modal - Intro -->
+                <p class="mb-4">The second big game project of Uppsala University. Agraria was a project made to be a modern grid-based action maze game. A lot of programming was focused on AI, pathfinding and level alteration, all the while maintaining a level editor for quick level design prototyping.</p>
+                <!-- Portfolio Modal - Details -->
+				<hr><p>
 				<b>Role:</b> Programmer, Designer, Musician<br>
-				<b>Team size:</b> 5
+				<b>Team size:</b> 5<br>
+				<b>Engine:</b> Unity C#
 				</p>
 				<hr>
-                <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 				<!-- Portfolio Modal - Video -->
 				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/NGC-TpGaQX0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-				<p class="text-secondary text-center"><b>W.I.P</b></p>
+				<p class="text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
@@ -655,18 +658,18 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <div class="text-left">
-				<hr>
-				<p class="text-secondary">
+                <div class="text-secondary text-left">
+				<!-- Portfolio Modal - Intro -->
+                <p class="mb-4">The second project in Futuregames, with a length of 4 weeks. A requirement was to create a game out of two sports, and so Junkhill Drifters was combined out of speed building and soapbox racing. This was my first real project within UE4 and I coded the foundation of the game in C++.</p>
+				<hr><p>
+				<!-- Portfolio Modal - Details -->
 				<b>Role:</b> Programmer<br>
-				<b>Team size:</b> 10
-				</p>
-				<hr>
-                <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+				<b>Team size:</b> 10<br>
+				<b>Engine:</b> Unreal Engine 4
+				</p><hr>
 				<!-- Portfolio Modal - Video -->
 				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/e_5mpATL9JM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-				<p class="text-secondary text-center"><b>W.I.P</b></p>
+				<p class="text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
                 </div>
