Functionality for toggle sliding content in project pages

--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
 				<hr>
 				<p>
 				<b>Role:</b> Programmer, Level designer<br>
+				<b>Length:</b> 7 Weeks<br>
 				<b>Team size:</b> 7<br>
 				<b>Engine:</b> Unity C#
 				</p>
@@ -403,12 +404,23 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">I was mainly in charge of UI functionality, the implementation of main mechanics such as dashing, jumping, cannonball firing and most importantly for GGC17, input methods that suited our unconventional controls.</p>
 				<!-- Portfolio Modal - Header -->
-				<h3 class="text-center">Handling multiple mouse devices</h3>
+				<div><h3 class="text-center project-header">Handling multiple mouse devices</h3>
 				<div class="divider-custom"><div class="header-custom-line"></div></div>
+				<div class="project-content">
 				<p class="mb-5">
 				The great concern at that time was how to have the game recognize inputs from multiple mices, since our constructed controls relied on using a mouse for each player to detect which way a wheel was steering towards. A unity plug-in called Multi Input helped resolve that issue since nearly no other tools was possible to use. The library that the asset provided made it possible for the game to distinguish and handle multiple input devices of the same type.<br>
 				However, the implementation of the new input methods meant that each player needed an input device assigned through code. The game should know what input devices to use for each player since each steering wheel was designed to be used by player 1 and 2 respectively. .  
 				</p>
+				</div></div>
+				<!-- Portfolio Modal - Header -->
+				<div><h3 class="text-center project-header">Team battle mode</h3>
+				<div class="divider-custom"><div class="header-custom-line"></div></div>
+				<div class="project-content">
+				<p class="mb-5">
+				Team battles.  
+				</p>
+				</div></div>
+				
 				<p class="text-center"><b>W.I.P</b></p>
 				<!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/rimramrum/charselect.png" alt="">
@@ -455,13 +467,13 @@
 				<div class="text-left text-secondary">
                 <!-- Portfolio Modal - Intro -->
 				<p class="mb-4">The first game project in my Futuregames education. Teams consisting of only 2D artists and programmers were to create a game with mechanics inspired by different types of classic arcade games. Hammer Hermit is a game with mechanics inspired by Tetris and Ice Climbers.</p>
-				<hr>
-				<p>
+				<!-- Portfolio Modal - Details -->
+				<hr><p>
 				<b>Role:</b> Programmer, Sound Designer, Musician<br>
+				<b>Length:</b> 2 Weeks<br>
 				<b>Team size:</b> 6<br>
 				<b>Engine:</b> Unity C#
-				</p>
-				<hr>
+				</p><hr>
 				<!-- Portfolio Modal - Video -->
 				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/4js-2c7N6ME" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <!-- Portfolio Modal - Text -->
@@ -508,15 +520,19 @@
                 </div>
 				<div class="text-secondary text-left">
                 <!-- Portfolio Modal - Intro -->
-                <p class="mb-4">The second game project of Futuregames, where the game had to evoke a certain theme of our choice. Transient came to evoke suspiciousness in the player. With 8 weeks and a team of 10, Transient became one of the most extensive projects I’ve been part of as of yet.</p>
+                <p class="mb-4">The third game project of Futuregames, where the game had to evoke a certain theme of our choice. Transient came to evoke suspiciousness in the player. With a large team and scope, Transient became one of the most extensive projects I’ve been part of as of yet.</p>
 				<!-- Portfolio Modal - Details -->
 				<hr><p>
 				<b>Role:</b> Programmer, Writer, Sound Designer, Musician<br>
+				<b>Length:</b> 8 Weeks<br>
 				<b>Team size:</b> 10<br>
 				<b>Engine:</b> Unity C#
 				</p><hr>
 				<!-- Portfolio Modal - Video -->
 				<div class="video-container mb-4"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/1yVosrdHw2s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<h4>Dynamic music system</h4><br>
+				<h4>Detecting interactable objects</h4><br>
+				<h4>Sound effects collections</h4><br>
 				<p class="text-center"><b>W.I.P</b></p>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.png" alt="">
@@ -563,6 +579,7 @@
 				<!-- Portfolio Modal - Details -->
 				<hr><p>
 				<b>Role:</b> Programmer, Designer<br>
+				<b>Length:</b> 5 Weeks<br>
 				<b>Team size:</b> 2<br>
 				<b>Engine:</b> Unity C#
 				</p><hr>
@@ -612,6 +629,7 @@
                 <!-- Portfolio Modal - Details -->
 				<hr><p>
 				<b>Role:</b> Programmer, Designer, Musician<br>
+				<b>Length:</b> 7 Weeks<br>
 				<b>Team size:</b> 5<br>
 				<b>Engine:</b> Unity C#
 				</p>
@@ -664,7 +682,8 @@
 				<hr><p>
 				<!-- Portfolio Modal - Details -->
 				<b>Role:</b> Programmer<br>
-				<b>Team size:</b> 10<br>
+				<b>Length:</b> 4 Weeks<br>
+				<b>Team size:</b> 13<br>
 				<b>Engine:</b> Unreal Engine 4
 				</p><hr>
 				<!-- Portfolio Modal - Video -->
