--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <b class="text-uppercase fa-2x">RIM RAM RUM</b>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/crisscrop.png" alt="">
+            <img class="img-fluid" src="img/portfolio/rimramrum/rimramrumpreview.gif" alt="">
           </div>
         </div>
 
