New background patterns

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="bg-secondary footer text-center">
     <div class="container">
       <div class="row">
 
