New red background, added tool list column, maybe its a good thing to show tools that I use

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Antonio Ackalin</a>
-      <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary-color text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
@@ -188,7 +188,7 @@
       <div class="about-intro mb-4">
 		<div class="lead text-left">
 			<p>
-			I'm an enthusiastic <b>game developer</b> who've been greatly interested in creating video game fun since forever!
+			I'm an enthusiastic <b>game developer</b> who's been greatly interested in creating video game fun since forever!
 			</p><p>
 			That is why I have acquainted myself with multiple fields within game dev to become a <b>capable</b> and <b>savvy developer</b>.<br>
 			With my main and strongest proffession being <b>programming</b>, I quickly get to rapidly prototype game concepts and use my problem solving ability to solve bugs and faulty design alike.<br>
@@ -209,25 +209,45 @@
       </div>
       <div class="row">
 		<div class="col-lg-4 ml-auto">
-		  <h4 class="text-center">Capabilities</h4><hr>
-			  <ul class="text-center">
-				<li class="lead"><i class="fas fa-keyboard"></i> Programming</li>
-				<li class="lead"><i class="far fa-lightbulb"></i> Game Design</li>
-				<li class="lead"><i class="fas fa-music"></i> Sound Design</li>
-				<li class="lead"><i class="fas fa-drum"></i> Music Composition</li>
-				<li class="lead"><i class="fas fa-pencil-alt"></i> Writing</li>
+		  <h4 class="text-center">Skills</h4><hr>
+			  <ul class="text-center lead">
+				<li><i class="fas fa-keyboard"></i> Programming</li>
+				<li><i class="far fa-lightbulb"></i> Game Design</li>
+				<li><i class="fas fa-music"></i> Sound Design</li>
+				<li><i class="fas fa-drum"></i> Music Composition</li>
+				<li><i class="fas fa-pencil-alt"></i> Writing</li>
 			  </ul>
-		  <!--<p class="lead">Uppsala University Campus Gotland in Game design & Programming</p>-->
 		</div>
 		<div class="col-lg-4 mr-auto">
 		  <h4 class="text-center">Education</h4><hr>
-			  <h5 class ="text-center mb-1">Uppsala University<h5>
-				<p class="text-center lead">Game Design & Programming<br>
+			  <h5 class ="text-center mb-0">Uppsala University</h5>
+				<p class="text-center lead mb-0">Game Design & Programming<br>
 				(2016 – 2019)</p>
-			  <h5 class ="text-center mb-1">Futuregames<h5>
+			  <h5 class ="text-center mb-0">Futuregames</h5>
 				<p class="text-center lead">Game Programming<br>
 				(2019 – 2021)</p>
 		  <!--<p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>-->
+		</div>
+		<div class="col-lg-4 ml-auto">
+		  <h4 class="text-center">Tools</h4><hr>
+			<div class="row">
+				<div class="col-lg-tools ml-auto">
+					<ul class="text-center lead mb-0">
+						<li class="tool-list">Unity</li>
+						<li class="tool-list">Photoshop</li>
+						<li class="tool-list">Audacity</li>
+						<li class="tool-list">VEGAS Pro</li>
+					</ul>
+				</div>
+				<div class="col-lg-tools mr-auto">
+					<ul class="text-center lead">
+						<li class="tool-list">UE4</li>
+						<li class="tool-list">Illustrator</li>
+						<li class="tool-list">FL Studio</li>
+						<li class="tool-list">Visual Studio</li>
+					</ul>
+				</div>
+			</div>
 		</div>
       </div>
 	  
@@ -565,7 +585,7 @@
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
                 <h2 class="portfolio-modal-title text-secondary text-uppercase mb-2">Transient</h2>
-                <h3 class="text-secondary mb-0">Lockdown Survival Horror</h3>
+                <h3 class="text-secondary mb-0">50's Lockdown Stealth Horror</h3>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
