--- a/index.html
+++ b/index.html
@@ -218,16 +218,6 @@
 				<li><i class="fas fa-pencil-alt"></i> Writing</li>
 			  </ul>
 		</div>
-		<div class="col-lg-4 mr-auto">
-		  <h4 class="text-center">Education</h4><hr>
-			  <h5 class ="text-center mb-0">Uppsala University</h5>
-				<p class="text-center lead mb-0">Game Design & Programming<br>
-				(2016 – 2019)</p>
-			  <h5 class ="text-center mb-0">Futuregames</h5>
-				<p class="text-center lead">Game Programming<br>
-				(2019 – 2021)</p>
-		  <!--<p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>-->
-		</div>
 		<div class="col-lg-4 ml-auto">
 		  <h4 class="text-center">Tools</h4><hr>
 			<div class="row">
@@ -248,6 +238,16 @@
 					</ul>
 				</div>
 			</div>
+		</div>
+		<div class="col-lg-4 mr-auto">
+		  <h4 class="text-center">Education</h4><hr>
+			  <h5 class ="text-center mb-0">Uppsala University</h5>
+				<p class="text-center lead mb-1">Game Design & Programming<br>
+				(2016 – 2019)</p>
+			  <h5 class ="text-center mb-0">Futuregames</h5>
+				<p class="text-center lead mb-0">Game Programming<br>
+				(2019 – 2021)</p>
+		  <!--<p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>-->
 		</div>
       </div>
 	  
