Justifying about me paragraphs, it may make it more readable

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
       <!-- About Section Content -->
       <div class="about-intro mb-4">
-		<div class="lead text-left">
+		<div class="lead text-justify">
 			<p>
 			I'm an enthusiastic <b>game developer</b> who's been greatly interested in creating video game fun since forever!
 			</p><p>
