Added tools icons and put link to their source in footer.

--- a/index.html
+++ b/index.html
@@ -222,19 +222,19 @@
 		  <h4 class="text-center">Tools</h4><hr>
 			<div class="row">
 				<div class="col-lg-tools ml-auto">
-					<ul class="text-center lead mb-0">
-						<li class="tool-list">Unity</li>
-						<li class="tool-list">Photoshop</li>
-						<li class="tool-list">Audacity</li>
-						<li class="tool-list">VEGAS Pro</li>
+					<ul class="text-left lead mb-0">
+						<li class="tool-list tool-unity">Unity</li>
+						<li class="tool-list tool-ps">Photoshop</li>
+						<li class="tool-list tool-audacity">Audacity</li>
+						<li class="tool-list tool-vegas">VEGAS Pro</li>
 					</ul>
 				</div>
 				<div class="col-lg-tools mr-auto">
-					<ul class="text-center lead">
-						<li class="tool-list">UE4</li>
-						<li class="tool-list">Illustrator</li>
-						<li class="tool-list">FL Studio</li>
-						<li class="tool-list">Visual Studio</li>
+					<ul class="text-left lead">
+						<li class="tool-list tool-unreal">UE4</li>
+						<li class="tool-list tool-ai">Illustrator</li>
+						<li class="tool-list tool-fl">FL Studio</li>
+						<li class="tool-list tool-vs">Visual Studio</li>
 					</ul>
 				</div>
 			</div>
@@ -367,7 +367,7 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Antonio Ackalin 2020</small>
+      <small>Copyright &copy; Antonio Ackalin 2020. Tools icons by <a href="https://icons8.com/">icons8</a>.</small>
     </div>
   </section>
 
