--- a/index.html
+++ b/index.html
@@ -222,19 +222,19 @@
 		  <h4 class="text-center">Tools</h4><hr>
 			<div class="row">
 				<div class="col-lg-tools ml-auto">
-					<ul class="text-left lead mb-0">
-						<li class="tool-list tool-unity">Unity</li>
-						<li class="tool-list tool-ps">Photoshop</li>
-						<li class="tool-list tool-audacity">Audacity</li>
-						<li class="tool-list tool-vegas">VEGAS Pro</li>
+					<ul class="text-center lead mb-0">
+						<li class="tool-unity tool-list ">Unity</li>
+						<li class="tool-ps tool-list ">Photoshop</li>
+						<li class="tool-audacity tool-list ">Audacity</li>
+						<li class="tool-vegas tool-list ">VEGAS Pro</li>
 					</ul>
 				</div>
 				<div class="col-lg-tools mr-auto">
-					<ul class="text-left lead">
-						<li class="tool-list tool-unreal">UE4</li>
-						<li class="tool-list tool-ai">Illustrator</li>
-						<li class="tool-list tool-fl">FL Studio</li>
-						<li class="tool-list tool-vs">Visual Studio</li>
+					<ul class="text-center lead">
+						<li class="tool-unreal tool-list ">UE4</li>
+						<li class="tool-ai tool-list ">Illustrator</li>
+						<li class="tool-fl tool-list ">FL Studio</li>
+						<li class="tool-vs tool-list ">Visual Studio</li>
 					</ul>
 				</div>
 			</div>
